--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --dark--black:#000000;
+  --light--blue:#38B6FF;
+  --dark--blue:#0078D4;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,3 +22,5 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
