--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,12 +10,12 @@
   --dark--blue:#0078D4;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
