--- a/frontend/src/app/styles/footer.module.css
+++ b/frontend/src/app/styles/footer.module.css
@@ -12,7 +12,7 @@
 }
 
 
-.quick-links, .follow-us {
+.quick-links {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -52,7 +52,7 @@
     margin: 0;
 }
 
-.quick-links ul, .follow-us ul {
+.quick-links ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -61,16 +61,73 @@
     gap: 0.5rem;
 }
 
-.quick-links ul li, .follow-us ul li {
+
+.quick-links ul li {
     font-size: 1rem;
     color: #666;
     cursor: pointer;
     transition: color 0.3s;
 }
 
-.quick-links ul li:hover, .follow-us ul li:hover {
+.quick-links ul li:hover {
     color: #000;
 }
+
+.follow-us {
+    font-family: Arial, sans-serif;
+  }
+  
+  .follow-us p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    color: #333;
+  }
+  
+
+  .follow-us ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex; 
+    justify-content: center; 
+    gap: 1rem; 
+  }
+  
+  .follow-us ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem; 
+    height: 3rem;
+    border: 2px solid #eee; 
+    border-radius: 50%; 
+    transition: all 0.3s ease;
+    overflow: hidden; 
+  }
+  
+  .follow-us ul li a {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    text-decoration: none; 
+    color: #000;
+    border-radius: inherit;
+    font-size: 1.5rem; 
+    width: 70%; 
+    height: 70%;
+  }
+  
+  .follow-us ul li:hover {
+    border-color: #000; 
+    background-color: #f9f9f9; 
+  }
+  
+  .follow-us ul li a:hover {
+    color: #333;
+  }
+  
+  
 
 .footer-bottom {
     border-top: 1px solid #ddd;
@@ -92,6 +149,7 @@
     display: flex;
     justify-content: center;
     gap: 1rem;
+    cursor: pointer;
 }
 
 .footer-bottom ul li {
@@ -156,16 +214,15 @@ transform: matrix(0.98, -0.22, 0.3, 0.95, 0, 0);
 }
 
 .footer .rectangle:nth-child(4){
-    /* Rectangle 79 */
-
 position: absolute;
 width: 100%;
 height: 100%;
 left: 70vw;
-/* /* left: -10vw; */
 top: 450px; 
 background: rgba(255, 255, 255, 0.52);
 border-radius: 48px;
 transform: rotate(-145.97deg);
 
 }
+
+
