--- a/frontend/src/app/styles/header.module.css
+++ b/frontend/src/app/styles/header.module.css
@@ -2,11 +2,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    left: calc(50% - 1268px/2 - 11px);
+    top: 40px;
     padding: 1rem 2rem;
     background-color:var(--background);
     border-bottom: 1px solid #ddd;
     font-family: Arial, sans-serif;
+    margin: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 8px 100px rgba(0, 0, 0, 0.03);
 }
+
 
 .logo-container {
     display: flex;
