--- a/frontend/src/styles/steps.module.css
+++ b/frontend/src/styles/steps.module.css
@@ -221,7 +221,7 @@
     flex-direction: row;
     align-items: center;
     gap: 2rem;
-    padding: 0.3rem 1rem;
+    padding: 0.6rem 1.3rem;
     border-radius: 60px;
     border-top: 2px solid #0078D4;
     border-left: 2px solid #0078D4;
@@ -234,6 +234,8 @@
   
   .cloudactive{
     background-color: #2684FF;
+    color: #ffffff;
+    font-weight: bold;
     padding: 0.8rem;
     border-radius: 40px;
   }
