--- a/frontend/src/styles/footer.module.css
+++ b/frontend/src/styles/footer.module.css
@@ -226,3 +226,11 @@ transform: rotate(-145.97deg);
 }
 
 
+@media screen and (max-width: 768px) {
+    .footer-content{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+}
