--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -2,17 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    left: calc(50% - 1268px/2 - 11px);
-    top: 40px;
-    padding: 1rem 2rem;
-    background-color:var(--background);
+    padding: 0.5rem 2rem;
+    background-color: var(--background);
     border-bottom: 1px solid #ddd;
     font-family: Arial, sans-serif;
-    margin: 2rem;
+    margin: 1rem;
     border-radius: 10px;
     box-shadow: 0px 8px 100px rgba(0, 0, 0, 0.03);
+    overflow-x: hidden;
+    z-index: 1000 !important;
 }
-
 
 .logo-container {
     display: flex;
@@ -20,24 +19,17 @@
     gap: 0.5rem;
 }
 
-
 .logo-container h1 {
     font-size: 1.2rem;
     font-weight: bold;
     margin: 0;
 }
 
-.nav-links {
-    display: flex;
-    gap: 2rem;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    font-size: 1rem;
+.menu-button {
+    background: none;
+    border: none;
     cursor: pointer;
+    padding: 0.5rem;
 }
 
 .signup-button {
@@ -45,8 +37,8 @@
     border-radius: 20px;
     border-top: 2.5px solid var(--foreground);
     border-bottom: 4.5px solid var(--foreground);
-    border-left:2.5px solid var(--foreground);
-    border-right:4.5px solid var(--foreground);
+    border-left: 2.5px solid var(--foreground);
+    border-right: 4.5px solid var(--foreground);
     background: transparent;
     font-size: 1rem;
     font-weight: bold;
@@ -59,6 +51,25 @@
     color: white;
 }
 
+.side-nav {
+    background-color: var(--background);
+}
 
+/* Animation for side nav */
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
 
-
+@keyframes slideOut {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(100%);
+    }
+}
